<resources>
    <string name="app_name">MyAppCarlos</string>
    <string name="Inicio">Inicio</string>

    <string name="titulo">Bienvenido a mi App de ingles</string>
    <string name="titulo0">Elige tu modo de juego</string>
    <string name="titulo1">Numeros</string>
    <string name="titulo2">Animales</string>
    <string name="titulo3">Colores</string>
    <string name="titulo4">Frutas</string>
    <string name="titulo5">Carga Imagen de Picasso</string>
    <string name="titulo6">Carga Imagen local</string>
    <string name="titulo7">Carga Imagen de Internet</string>

    <string name="titulo01">Aprende</string>
    <string name="titulo02">Juega</string>

    <string name="boton">Siguiente</string>
    <string name="boton1">Mariposa</string>
    <string name="boton2">Colibri</string>
    <string name="boton3">Unicornio</string>

    <string name="botonv">Verde</string>
    <string name="botonr">Rojo</string>
    <string name="botona">Azul</string>

    <string name="boton01">Uno</string>
    <string name="boton02">Dos</string>
    <string name="boton03">Tres</string>
    <string name="boton04">Cuatro</string>
    <string name="boton05">Cinco</string>
    <string name="boton06">Seis</string>
    <string name="boton07">Siete</string>
    <string name="boton08">Ocho</string>

    <string name="nombre1">Sandia</string>
    <string name="nombre2">Mango</string>
    <string name="nombre3">Manzana</string>
    <string name="nombre4">Limon</string>

    <string name="Texto1">¿cual es la imagen correcta?</string>


        <!-- Strings para la pantalla de Login (Versión Básica) -->
        <string name="login_hint_email_basico">Correo Electrónico</string>
        <string name="login_hint_password_basico">Contraseña</string>
        <string name="login_button_text_basico">Iniciar Sesión</string>
        <string name="login_signup_prompt_basico">¿No tienes cuenta? Regístrate aquí</string>
        <string name="login_logo_description_basico">Logo de la aplicación</string>




    <!-- Strings para la pantalla de Registro -->
    <string name="register_title">Crea tu cuenta</string>
    <string name="register_hint_name">Nombre completo</string>
    <string name="register_hint_nickname">Apodo</string>
    <string name="register_hint_age">Edad</string>
    <string name="register_label_school">Selecciona tu Colegio</string>
    <string name="register_label_gender">Género</string>
    <string name="register_button_submit">Enviar</string>
    <!-- ⭐ NUEVO: Strings para RadioButtons de Género ⭐ -->
    <string name="gender_male">Hombre</string>
    <string name="gender_female">Mujer</string>

    <!-- Mensajes para el usuario -->
    <string name="register_success">¡Registro completado!</string>
    <string name="register_error_fields_required">Por favor, rellena todos los campos</string>


        <!-- Strings para la pantalla de Bienvenida -->
        <string name="welcome_message">Bienvenido a la app de Inglés</string>
        <string name="welcome_button_next">Siguiente</string>
        <string name="welcome_icon_description">Icono de bienvenida</string>



        <!-- Estilos para la pantalla del juego -->
        <style name="GameTitleText">
            <item name="android:textSize">24sp</item>
            <item name="android:textColor">@color/black</item>
            <item name="android:fontFamily">sans-serif-condensed-medium</item>
        </style>

        <style name="WordToGuessText">
            <item name="android:textSize">34sp</item>
            <item name="android:textColor">@color/black</item>
            <item name="android:fontFamily">sans-serif-black</item>
            <item name="android:textStyle">bold</item>
        </style>

        <style name="GameImageButton">
            <!-- layout_weight hace que las columnas se dividan el espacio equitativamente -->
            <item name="android:layout_width">0dp</item>
            <item name="android:layout_height">0dp</item>
            <item name="android:layout_columnWeight">1</item>
            <item name="android:layout_rowWeight">1</item>
            <item name="android:scaleType">centerCrop</item>
            <item name="android:background">@android:color/transparent</item>
            <item name="android:padding">8dp</item>
        </style>

        <!-- ... otros strings ... -->
    <string name="juego_titulo_frutas">¿Cuál es esta fruta?</string>
    <string name="boton_siguiente">Siguiente Nivel</string>
    <string name="opcion_de_juego_1">Opción de juego 1</string>
    <string name="opcion_de_juego_2">Opción de juego 2</string>
    <string name="opcion_de_juego_3">Opción de juego 3</string>
    <string name="opcion_de_juego_4">Opción de juego 4</string>
    <string name="score_label">Puntos: 0</string>
    <string name="juego_titulo_animales">¿Cuál es este animal?</string>
    <string name="juego_titulo_numeros">¿Cuál es este número?</string>
    <string name="juego_titulo_colores">¿Cuál es este color?</string>


        <!-- Feedback del juego -->
        <string name="feedback_correcto">¡Correcto!</string>
        <string name="feedback_incorrecto">Incorrecto</string>

        <!-- Palabras del juego -->
        <string name="word_watermelon">Watermelon</string>

        <!-- Opciones de imágenes (puedes usar esto si quieres mostrar texto alternativo) -->
        <string name="option_sandia">Sandía</string>
        <string name="option_mango">Mango</string>
        <string name="option_manzana">Manzana</string>
        <string name="option_limon">Limón</string>
        <string name="word_hummingbird">Hummingbird</string>
        <string name="word_two">Two</string>
        <string name="word_blue">Blue</string>
        <string name="game_finished">¡Juego Terminado! Puntuación Final: %d</string>


    <string-array name="colegios_popayan">
        <item>Seleccione un colegio</item>
        <item>Institución Educativa INEM Francisco José de Caldas</item>
        <item>Institución Educativa Técnico Industrial</item>
        <item>Institución Educativa Melvin Jones</item>
        <item>Colegio Champagnat</item>
        <item>Colegio San José de Tarbes</item>
        <item>Colegio Las Mercedes</item>
        <item>Colegio Colombo Francés</item>
        <item>Colegio Los Andes</item>
        <item>Institución Educativa Don Bosco</item>
        <item>Institución Educativa Jesús de Nazareth</item>
        <item>Colegio Sagrado Corazón de Jesús</item>
        <item>Colegio Liceo Alejandro de Humboldt</item>
        <item>Colegio San Agustín</item>
        <item>Institución Educativa La Pamba</item>
        <item>Institución Educativa Liceo de la Universidad del Cauca</item>
        <item>Institución Educativa Hogar Juvenil Campesino</item>
    </string-array>
    <string name="Siguiente1">Siguiente</string>


</resources>