<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="32dp"
    tools:context=".controller.Login">

    <!-- Logo (Opcional) -->

    <!-- Campo para Usuario o Email -->

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="250dp"
        android:layout_height="218dp"
        android:layout_marginBottom="1dp"
        android:contentDescription="@string/login_logo_description_basico"
        android:src="@drawable/fondobimbo" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint_email_basico"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="16dp"/>

    <!-- Campo para Contraseña -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint_password_basico"
        android:inputType="textPassword"
        android:layout_marginBottom="24dp"/>

    <!-- Botón de Iniciar Sesión -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:text="@string/login_button_text_basico"
        android:onClick="irBienvenido" />

    <!-- Texto para Registrarse -->
    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_signup_prompt_basico"
        android:onClick="irRegister02" />

</LinearLayout>
