<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="32dp"
    android:background="@drawable/eleccionfondo"
    tools:context=".MenuApp">

    <!-- Título principal -->

    <!-- Botón Números -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:elevation="6dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/titulo0"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="280dp"
        android:layout_height="wrap_content"
       android:onClick="irMenuApp"
        android:text="@string/titulo01"
        android:fontFamily="sans-serif-medium"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/lightblue"
        android:elevation="8dp"
        android:layout_marginBottom="30dp"
        android:padding="12dp" />

    <Button
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:onClick="irJuegos"
        android:text="@string/titulo02"
        android:fontFamily="sans-serif-medium"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/lightblue"
        android:elevation="8dp"
        android:layout_marginBottom="30dp"
        android:padding="12dp" />



</LinearLayout>